# trie-simple

./: .gitignore  .hlint.yaml  .travis.yml  ABOUT  CHANGELOG.md  LICENSE  README.md  bench.csv  bench.ods  cabal.project  cabal.project.local  run_bench.sh  stack.yaml  trie-simple.cabal
.github/workflows/: haskell.yml
bench/: Common.hs  analyze.R  run_bench.sh  trie-benchmark.hs
doc/: benchmark-generation-date  benchmark.csv
example/: hextalk.sh  hextalk_large8.dot  hextalk_large8.txt  words-to-graph.hs
src/: Queue.hs  Util.hs
src/Data/: ADFA.hs
src/Data/ADFA/: Algorithm.hs  Internal.hs
src/Data/Trie/: Map.hs  Set.hs  SetPathComp.hs
src/Data/Trie/Map/: Hidden.hs  Internal.hs
src/Data/Trie/Set/: Hidden.hs  Internal.hs
src/Data/Vector/: Growable.hs
test/: Common.hs
test/Data/Trie/: Gen.hs  MapSpec.hs  SetPathCompSpec.hs  SetSpec.hs  TrieSpec.hs
test/Data/Trie/Map/: Gen.hs
test/Data/Trie/Set/: Gen.hs
test/Data/Trie/SetPathComp/: Gen.hs
trie-simple-not-applicative/: stack.yaml  trie-simple-not-applicative.cabal
trie-simple-not-applicative/app/: Common.hs  Props.hs  TestTMap.hs
trie-simple-not-applicative/app/Data/Trie/Map/: Gen.hs
