name:                trie-simple
version:             0.1.0.0
synopsis:            Simple Map-based Trie
description:         Please see README.md
license:             BSD3
license-file:        LICENSE
author:              Koji Miyazato
maintainer:          viercc@gmail.com
copyright:           Koji Miyazato
category:            Data Structure
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Trie.Set,
                       Data.Trie.Map
  other-modules:       Util
  build-depends:       base >= 4.8 && < 5,
                       deepseq,
                       containers,
                       mtl
  default-language:    Haskell2010
  ghc-options:         -O -Wall -Wno-dodgy-exports

test-suite trie-simple-test
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  other-modules:  Data.Trie.TrieSpec,
                  Data.Trie.Gen,
                  Common
  build-depends: base >= 4.8 && < 5,
                 containers,
                 vector,
                 QuickCheck,
                 hspec,
                 trie-simple
  ghc-options: -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010

