name:                trie-simple
version:             0.3.0.0
synopsis:            Simple Map-based Trie
description:         Please see README.md
license:             BSD3
license-file:        LICENSE
author:              Koji Miyazato
maintainer:          viercc@gmail.com
copyright:           Koji Miyazato
category:            Data Structure
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Trie.Set,
                       Data.Trie.Set.Internal,
                       Data.Trie.Map,
                       Data.Trie.Map.Internal
  other-modules:       Util,
                       Data.Trie.Set.Hidden,
                       Data.Trie.Map.Hidden
  build-depends:       base >= 4.8 && < 5,
                       deepseq,
                       containers,
                       semigroups,
                       mtl
  default-language:    Haskell2010
  ghc-options:         -O -Wall -Wno-dodgy-exports

test-suite trie-simple-test
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  other-modules:  Data.Trie.SetSpec,
                  Data.Trie.Set.Gen,
                  Data.Trie.MapSpec,
                  Data.Trie.Map.Gen,
                  Common
  build-depends: base >= 4.9 && < 5,
                 containers,
                 vector,
                 QuickCheck,
                 hspec,
                 trie-simple
  ghc-options: -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010

benchmark trie-benchmark
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             trie-benchmark.hs
  build-depends:       base,
                       deepseq,
                       containers,
                       criterion,
                       vector,
                       mwc-random,
                       trie-simple
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
