name:                trie-simple-not-applicative
version:             0.1.0.0
synopsis:            Data.Trie.Map is not an Applicative
description:         Please see README.md
author:              Koji Miyazato
maintainer:          viercc@gmail.com
copyright:           Koji Miyazato
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable tmap-test-monad
  hs-source-dirs: app
  main-is:        TestTMap.hs
  build-depends: base >= 4.12 && < 5,
                 containers,
                 trie-simple
  ghc-options: -Wall -Wno-orphans
  default-language: Haskell2010
